able to run using the command: java --module-path build/libs/mongoose-4.2.0.jar --module com.emc.mongoose/com.emc.mongoose.Main --storage-driver-type=dummy-mock [skip ci]